Added simple example about implementing Reactive Streams API

--- a/reactive-api/pom.xml
+++ b/reactive-api/pom.xml
@@ -11,4 +11,12 @@
 
   <artifactId>reactive-api</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.reactivestreams</groupId>
+      <artifactId>reactive-streams</artifactId>
+      <version>1.0.2</version>
+    </dependency>
+  </dependencies>
+
 </project>
